# appmeta

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  plan.md  spec.md
.github/workflows/: ci.yml  deploy-website.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: dependency_risks.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  prompts.rs  types.rs
src-tauri/src/ai/providers/: openai.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/project/: constants.rs  facts.rs  keywords.rs  mod.rs  truth_file.rs  validation.rs
src-tauri/src/scanner/: dependencies.rs  documents.rs  features.rs  flutter.rs  ios.rs  links.rs  mod.rs  naming.rs  permissions.rs  types.rs
src-tauri/src/storage/: config.rs  mod.rs  projects.rs
src/lib/api/: tauri.ts
src/lib/components/: FieldCard.svelte  GenerateAllBar.svelte  WarningItem.svelte
src/lib/stores/: appStore.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/export/: +page.svelte
src/routes/facts/: +page.svelte
src/routes/iap/: +page.svelte
src/routes/privacy/: +page.svelte
src/routes/product-page/: +page.svelte
src/routes/review/: +page.svelte
src/routes/scan/: +page.svelte
src/routes/settings/: +page.svelte
website/: package-lock.json  package.json  svelte.config.js
website/src/: app.css  app.html
website/src/lib/components/: CTABanner.svelte  (+6 more)
website/src/routes/: +layout.svelte  +page.svelte
website/static/: CNAME
(+3 files in other folders)
