[package]
name = "appmeta"
version = "0.1.0"
description = "AppMeta — App Store Connect submission assistant"
authors = ["Aftaab Siddiqui"]
edition = "2021"

[lib]
name = "appmeta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
plist = "1"
walkdir = "2"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
